src/objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>SBQQ__TermDiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Term Discount Schedule applied to this order product.</description>
        <inlineHelpText>Term Discount Schedule applied to this order product.</inlineHelpText>
        <label>Term Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Order Products (Term Discount Schedule)</relationshipLabel>
        <relationshipName>TermedOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TerminatedDate__c</fullName>
        <description>Date that this order product&apos;s related subscription was terminated</description>
        <inlineHelpText>Date that this order product&apos;s related subscription was terminated</inlineHelpText>
        <label>Terminated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__UnproratedNetPrice__c</fullName>
        <description>The full-term Net Unit Price.</description>
        <inlineHelpText>The full term net price for individual line.</inlineHelpText>
        <label>Full-Term Net Unit Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradedSubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription being upgraded by this quote line.</description>
        <inlineHelpText>Subscription being upgraded by this quote line. When the quote is contracted this subscription will have its Terminated Date field populated.</inlineHelpText>
        <label>Upgraded Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Upgraded Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <formula>if( isblank(PricebookEntry.Product2.GlobalSKUMapping__r.SBU_Name__c), 
PricebookEntry.Product2.D_Level2__c &amp; &apos;-&apos; &amp; PricebookEntry.Product2.D_Level1__c,PricebookEntry.Product2.GlobalSKUMapping__r.SBU_Name__c)</formula>
        <label>SBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIMPLANT_Line_Item__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Populated by a workflow rule which evaluates the formula field SIMPLANT Order and brings back a numerical value. This field will be used in a rollup summary to the Order for evaluation in an approval process for North America</description>
        <inlineHelpText>Populated by a workflow rule which evaluates the formula field SIMPLANT Order and brings back a numerical value. This field will be used in a rollup summary to the Order for evaluation in an approval process for North America</inlineHelpText>
        <label>SIMPLANT Line Item</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIMPLANT_Software_Evaluation__c</fullName>
        <formula>CASE(PricebookEntry.Product2.PG4_Code__c,
&quot;ID8111&quot;,1,
&quot;ID8201&quot;,1,
&quot;ID8202&quot;,1,
&quot;ID8203&quot;,1,
&quot;ID8205&quot;,1,
&quot;ID8206&quot;,1,
&quot;ID8207&quot;,1,
&quot;ID8211&quot;,1,
&quot;ID8212&quot;,1,
&quot;ID8213&quot;,1,
&quot;ID8215&quot;,1,
&quot;ID8216&quot;,1,
&quot;ID8217&quot;,1,
&quot;ID8222&quot;,1,
&quot;ID8231&quot;,1,
&quot;ID8232&quot;,1,
&quot;ID8241&quot;,1,
&quot;ID8251&quot;,1,
&quot;ID8252&quot;,1,
&quot;ID8255&quot;,1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIMPLANT Software Evaluation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIMPLANT_Software_Line_Item__c</fullName>
        <label>SIMPLANT Software Line Item</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesPrice__c</fullName>
        <description>Shows the sales price of the line item (each) - the discounted price</description>
        <formula>UnitPrice * (1- Discount_Percent__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the sales price of the line item (each) - the discounted price</inlineHelpText>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Special__c</fullName>
        <label>Sales Special</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>***DENTSPLY Implants Specials***</fullName>
                </value>
                <value>
                    <fullName>2018XIVE15 - Xive 15 Implant Special $5,995UDS/$6,495CAD(expires 6/30/18)</fullName>
                </value>
                <value>
                    <fullName>2018XIVE10 - Xive 10 Implant Special $5,350UDS/$5,995CAD(expires 6/30/18)</fullName>
                </value>
                <value>
                    <fullName>***National Specials***</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Simplant_Software_Flag__c</fullName>
        <formula>IF(SIMPLANT_Software_Line_Item__c &gt; 0,  IMAGE(&quot;/resource/1431363452000/NA_SimplantSftw&quot;, &quot;SIMPLANT SOFTWARE&quot;,34,60),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Simplant Software Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalCost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalLineItemPricePDFButler__c</fullName>
        <formula>Total_Line_Item_Price__c * 1.1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Line Item Price PDF Butler</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalPriceNet__c</fullName>
        <formula>NettPrice__c *  Quantity - (  NettPrice__c *  Quantity *  Discount_Percent__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalRetailPrice__c</fullName>
        <formula>AXRetailPrice__c * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Retail Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Line_Item_Price__c</fullName>
        <formula>Quantity * UnitPrice *(1- Discount_Percent__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Line Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_price_formula_c__c</fullName>
        <formula>UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UpperGuidance__c</fullName>
        <description>#5314 - Margin Guidance Calculation Process</description>
        <label>Upper Guidance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UseCoupon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Coupon?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UsedCouponValue__c</fullName>
        <formula>IF(UseCoupon__c = true, Quantity * UnitPrice, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Used Coupon Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_of_Samples_for_Sales_Rep__c</fullName>
        <label>Value of Samples for Sales Rep</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_of_free_product__c</fullName>
        <label>Value of free product</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <description>#5314 - Margin Guidance Calculation Process</description>
        <label>Weight</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WeightedLowerGuidance__c</fullName>
        <description>#5314 - Margin Guidance Calculation Process</description>
        <label>Weighted Lower Guidance</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WeightedUpperGuidance__c</fullName>
        <description>#5314 - Margin Guidance Calculation Process</description>
        <label>Weighted Upper Guidance</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>Can_Not_Pick_Header_Specials</fullName>
        <active>true</active>
        <errorConditionFormula>OR( Text(Sales_Special__c)= &quot;***DENTSPLY Implants Specials***&quot;,
Text(Sales_Special__c) =&quot;***National Specials***&quot;)</errorConditionFormula>
        <errorDisplayField>Sales_Special__c</errorDisplayField>
        <errorMessage>Please pick a valid sales special from the list (not the header row!)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_if_discount_100</fullName>
        <active>false</active>
        <errorConditionFormula>IF(AND(Discount_Percent__c =1.00, ISPICKVAL(Free_of_Charge_Delivery__c, &quot;&quot;), OR(Order.RecordTypeId =&quot;0120J000000cn2w&quot;, Order.RecordTypeId =&quot;0120J000000cn31&quot;)), true, false)</errorConditionFormula>
        <errorDisplayField>Free_of_Charge_Delivery__c</errorDisplayField>
        <errorMessage>You must choose a type of delivery for products that are free of charge</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_if_foc_notblank</fullName>
        <active>false</active>
        <errorConditionFormula>AND(or(isblank(Discount_Percent__c), Discount_Percent__c&lt;1), Isblank(text(Free_of_Charge_Delivery__c))=False, OR(Order.RecordTypeId =&quot;0120J000000cn2w&quot;, Order.RecordTypeId =&quot;0120J000000cn31&quot;))</errorConditionFormula>
        <errorDisplayField>Discount_Percent__c</errorDisplayField>
        <errorMessage>You must insert 100% discount if the products are free of charge</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OM_Max_Discount</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Discount_Percent__c &gt; 1, Discount_Percent__c &lt; -1)</errorConditionFormula>
        <errorDisplayField>Discount_Percent__c</errorDisplayField>
        <errorMessage>Discount Percent must be between -100 and 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_Line_Description_Mandatory</fullName>
        <active>true</active>
        <description>VDW team needs to track LOT numbers for FOC orders
TFUS-000004066</description>
        <errorConditionFormula>(
				Order.Pricebook2Id = &quot;01s6M000002LMTs&quot; || Order.Pricebook2Id = &quot;01s6M000002LMTx&quot;
)
	&amp;&amp;
(
				TEXT( Free_of_Charge_Delivery__c )  = &quot;Sales Rep&quot; ||
				TEXT( Free_of_Charge_Delivery__c )  = &quot;Dealer&quot;
) &amp;&amp;
				Description =&quot;&quot;</errorConditionFormula>
        <errorDisplayField>Description</errorDisplayField>
        <errorMessage>Please fill in the LOT number on the line description fields of each article when choosing FOC delivery &quot;Sales Rep&quot; OR &quot;Dealer&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__CannotChangeBookingIndicatorOnActivation</fullName>
        <active>true</active>
        <description>Can’t edit the bookings status on an activated order product.</description>
        <errorConditionFormula>AND(SBQQ__Activated__c, ISCHANGED(SBQQ__BookingsIndicator__c))</errorConditionFormula>
        <errorDisplayField>SBQQ__BookingsIndicator__c</errorDisplayField>
        <errorMessage>Can’t edit the bookings status on an activated order product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__RecurringChargeTypeMustHaveBillingType</fullName>
        <active>true</active>
        <description>When Charge Type is Recurring, a Billing Type must be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Recurring&apos;), ISPICKVAL(SBQQ__BillingType__c, &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is Recurring, a Billing Type must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_frequency</fullName>
        <active>true</active>
        <description>When Charge Type is &apos;One-Time&apos;, a Billing Frequency value cannot be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingFrequency__c, &apos;&apos;)))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingFrequency__c</errorDisplayField>
        <errorMessage>When Charge Type is &apos;One-Time&apos;, a Billing Frequency value cannot be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_type</fullName>
        <active>true</active>
        <description>When Charge Type is One-Time or Usage, a Billing Type cannot be selected.</description>
        <errorConditionFormula>OR(
            AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))),
            AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Usage&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is One-Time or Usage, a Billing Type value cannot be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_May_Not_Change_the_Unit_Price</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISCHANGED(UnitPrice),
$User.ProfileId &lt;&gt; &quot;00e20000001Ygwu&quot;, /*#System: System Administrator*/
$User.ProfileId &lt;&gt; &quot;00e0J000001cy8i&quot;, /*#System: System Administrator (CPQ)*/
$User.ProfileId &lt;&gt; &quot;00e20000000kVxk&quot;,  /*System Administrator*/
$User.ProfileId &lt;&gt;  &quot;00e0J000001Ar8G&quot;,  /*#System: Integration User*/
$User.ProfileId &lt;&gt;  &quot;00e6M000001Yjg8&quot; /*#System: All Integration Users*/)</errorConditionFormula>
        <errorDisplayField>UnitPrice</errorDisplayField>
        <errorMessage>You are not allowed to change the Unit Price, since it is controlled via the price list in Salesforce.com. To change the price, please add a discount instead.</errorMessage>
    </validationRules>
</CustomObject>